<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Cycan Wallet</string>
    <string name="tv_scan_code">扫码</string>
    <string name="tv_scan_qr_tip">请将镜头对准二维码进行扫描</string>
    <string name="openFlashlight">打开手电筒</string>
    <string name="failed_qr_code_recognition">识别二维码失败</string>
    <string name="failed_qr_code_recognition2">扫描失败！请将二维码图片摆放在正确的扫描区域中...</string>
    <string name="tv_please_wait">请稍候</string>
    <string name="comingSoon">敬请期待</string>
    <string name="success_transfer">转账成功</string>
    <string name="failure_transfer">转账失败</string>
    <string name="dialog_title_next_id_pwd">请输入密码</string>
    <string name="dialog_confirm">确认</string>
    <string name="dialog_cancel">取消</string>
    <string name="tv_insufficient_number">VNS数量不足</string>
    <string name="dialog_error_pwd">密码错误!</string>
    <string name="tv_exchange">兑换</string>
    <string name="tv_pwd">密码</string>
    <string name="loading">正在加载中</string>
    <string name="tv_main_application">帮客</string>
    <string name="my_wallet">我的钱包</string>
    <string name="tv_current_wallet">当前身份下的钱包</string>
    <string name="tv_import_wallet">导入的钱包</string>
    <string name="tv_safe_wallet">安全冷钱包</string>
    <string name="transfer_accounts">转账</string>
    <string name="card_wallet">卡钱包</string>
    <string name="dialog_please_input_pin">请输入PIN码</string>
    <string name="dialog_error_pin_pwd_length">PIN码不能小于6位</string>
    <string name="payInfo">支付信息</string>
    <string name="convertibleCurrency">兑换币种:</string>
    <string name="convertibleAddress">兑换地址:</string>
    <string name="convertibleMoney">金额:</string>
    <string name="selectPayAddress">选择付款地址</string>
    <string name="payAddress">付款地址</string>
    <string name="toAddress">收款地址</string>
    <string name="payAddr">付款地址:</string>
    <string name="toAddr">收款地址:</string>
    <string name="tv_transfer_balances">余额：</string>
    <string name="select_type_verify">选择校验类型</string>
    <string name="select">选择</string>
    <string name="minerFee">矿工费:</string>
    <string name="tv_tardiness">慢</string>
    <string name="tv_fast">快</string>
    <string name="tv_next">下一步</string>
    <string name="bancor">帮客</string>
    <string name="tv_trade_information_type">交易类型</string>
    <string name="contract_address">合约地址</string>
    <string name="vdns_miners_fees_des">推荐矿工费 (根据区块链网络波动)</string>
    <string name="tv_did_title">UP帮客智能积分兑换系统</string>
    <string name="tv_vdns_did_title">VDNS分布式域名系统</string>
    <string name="vdaiPlatform">VDAI平台</string>
    <string name="vdai_title">VDAI</string>
    <string name="tv_error_trans_check">"交易数据验证不正确"</string>
    <string name="tv_error_deal_sign">交易签名失败</string>
    <string name="tv_apply">申请</string>
    <string name="tv_get_did">获取您的DID去中心化身份地址信息</string>
    <string name="allow">允许</string>
    <string name="tv_amount">金额</string>
    <string name="vnsd_trans_info">支付信息</string>
    <string name="tv_input_collection_address_err">请输入正确的地址格式</string>
    <string name="is_copy">已复制</string>
    <string name="tv_insufficient_balance">余额不足</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="tv_register_name">注册域名</string>
    <string name="tv_del_name">删除域名</string>
    <string name="tv_trans_name">转让域名</string>
    <string name="tv_renew_name">域名续费</string>
    <string name="tv_trade_information">交易信息</string>
    <string name="tv_roll_out">转出</string>
    <string name="tv_remark">备注         </string>
    <string name="tv_miners_fee">矿工费     </string>
    <string name="tv_predict_date">预计到账时间：10分钟</string>
    <string name="tv_privacy">隐私政策</string>
    <string name="notOpenDes">硬件、NFC卡钱包暂时不可用，正在努力开发中，您可以把币转入app钱包</string>
    <string name="get_data_success">获取数据成功</string>
    <string name="get_data_error">获取数据失败</string>
    <string name="dialog_not_capture_yes">知道了</string>
    <string name="tv_refresh">刷新</string>
    <string name="failure_deal">交易失败</string>
    <string name="success_deal">交易成功</string>
    <string name="tv_use_eos_1">可用</string>
    <string name="error_format_account_to_be_credited">收款地址格式错误</string>
    <string name="tv_error_trans_decimals">"币种精度暂无数据"</string>
    <string name="tv_error_signature">"交易签名失败"</string>
    <string name="tv_transfer_input_account_quantity">数量</string>
    <string name="receivingAddress">接收地址</string>
    <string name="tv_send">发送</string>
</resources>
